reimplement greyline map

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-19 Sun 16:46 -->
+<!-- 2022-06-22 Wed 20:40 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -24,7 +24,7 @@
 <h1 class="title">Curriculum Vitae</h1>
 </header><table><tr><td width="300px"><center>
 
-<figure id="org016e40f">
+<figure id="org3c7f2f3">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
@@ -339,7 +339,7 @@ Authored and graded assignments; led discussion sections
 </tr>
 </table>
 <div class="cv-bullets">
-Supervised advanced high school students in university living environment<br />Curriculum of Observational astronomy, celestial mechanics, programming, mathematics
+Supervised advanced high school students in university living environment<br />Curriculum of observational astronomy, celestial mechanics, programming, mathematics
 </div>
 </div>
 
@@ -356,7 +356,7 @@ Supervised advanced high school students in university living environment<br />C
 </tr>
 </table>
 <div class="cv-bullets">
-
+Same as above
 </div>
 </div>
 </div>
@@ -386,7 +386,7 @@ Supervised advanced high school students in university living environment<br />C
 <div class="cv-block">
 <table>
 <tr>
-  <td><div class="cv-block-a">Advancement to Candidacy with Honors</div></td>
+  <td><div class="cv-block-a">Advancement to PhD Candidacy with Honors</div></td>
   <td><div class="cv-block-b">2022</div></td>
 </tr>
 <tr>
