--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-20 Mon 23:01 -->
+<!-- 2022-06-24 Fri 00:56 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
-<link rel=“canonical” href=“https://reillyraab.com" />
+<link rel="canonical" href="https://reillyraab.com" />
 <meta name="description" content="This site is a space for me to share my interest in various subjects, publish personal essays, and communicate about projects or developments which are important to me."/>
 </head>
 <body>
@@ -54,7 +54,8 @@
 <a href="./chess.html">Chess</a> <br>
 <a href="./dark-chess.html">Dark Chess</a> <br>
 <a href="./fischer-random.html">Fischer Random Chess</a> <br>
-<a href="./tex.html">Live Tex to SVG, PNG</a>
+<a href="./tex.html">Live Tex to SVG, PNG</a> <br>
+<a href="./greyline.html">Greyline Map &amp; Astronomical Clock (In progress)</a>
 </p>
 </div>
 </div>
