--- a/greyline.html
+++ b/greyline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-24 Fri 00:55 -->
+<!-- 2022-06-25 Sat 17:38 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Greyline Map</title>
@@ -28,6 +28,7 @@
 <header>
 <h1 class="title">Greyline Map</h1>
 </header><canvas id="canvas" style="position: fixed; top: 0; left: 0; width: 100%"></canvas>
+<samp id="date" style="position: fixed; top: 0; right: 0; background-color: transparent"></samp>
 <img id="month01" style="display: none;" width="100%"/>
 <img id="month02" style="display: none;" width="100%"/>
 <img id="month03" style="display: none;" width="100%"/>
@@ -39,7 +40,7 @@
 <img id="month09" style="display: none;" width="100%"/>
 <img id="month10" style="display: none;" width="100%"/>
 <img id="month11" style="display: none;" width="100%"/>
-<img id="month00" style="display: none;" width="100%"/>
+<img id="month12" style="display: none;" width="100%"/>
 <img id="night" src="/img/greyline/night.jpg" style="display: none;" width="100%"/>
 </main>
 <footer id="postamble" class="boilerplate">
