--- a/greyline.html
+++ b/greyline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-25 Sat 17:38 -->
+<!-- 2022-06-25 Sat 21:03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Greyline Map</title>
@@ -14,7 +14,7 @@
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
 <link rel=“canonical” href=“https://reillyraab.com/greyline" />
-<meta name="description" content="A combined map of Earth and astronomical clock" />
+<meta name="description" content="A map of Earth and interactive astronomical clock" />
 <script defer src="js/lib/astronomy.browser.js"></script>
 <script defer src="js/lib/gpu.js"></script>
 <script defer src="js/lib/curve-calc.js"></script>
