--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-24 Fri 00:56 -->
+<!-- 2022-06-25 Sat 21:04 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -55,7 +55,7 @@
 <a href="./dark-chess.html">Dark Chess</a> <br>
 <a href="./fischer-random.html">Fischer Random Chess</a> <br>
 <a href="./tex.html">Live Tex to SVG, PNG</a> <br>
-<a href="./greyline.html">Greyline Map &amp; Astronomical Clock (In progress)</a>
+<a href="./greyline.html">Greyline Map &amp; Interactive Astronomical Clock</a>
 </p>
 </div>
 </div>
