--- a/reading-list.html
+++ b/reading-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-17 Fri 11:53 -->
+<!-- 2022-08-30 Tue 11:46 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Digital Bookshelf</title>
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
+<script src="js/lib/copy-tex.js"></script>
 </head>
 <body>
 <div id="preamble" class="boilerplate">
@@ -63,7 +64,6 @@ tbody > tr:first-of-type h4 {
 or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </center>
 </p>
-
 
 <div id="outline-container-Math-and-Science" class="outline-2">
 <h2 id="Math-and-Science">Math and Science</h2>
@@ -131,9 +131,9 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
     <td> <a href="https://en.wikipedia.org/wiki/Ken_Thompson">Ken Thompson
     <td> 1984 </td>
   </tr>
-   <tr>
+  <tr>
     <td colspan="3">
-      <h4>Talks / Lectures</h4>
+      <h4>Talks</h4>
     </td>
   </tr>
   <tr>
@@ -142,9 +142,19 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
     <td> 2018 </td>
   </tr>
   <tr>
-    <td> <a href="https://www.youtube.com/playlist?list=PLE18841CABEA24090">MIT 6.001 Structure and Interpretation</a></td>
-    <td> <a href="https://en.wikipedia.org/wiki/Hal_Abelson">Abelson</a>, <a href="https://en.wikipedia.org/wiki/Gerald_Jay_Sussman">Sussman</a></td>
+    <td colspan="3">
+      <h4>Lecture Series</h4>
+    </td>
+  </tr>
+  <tr>
+    <td> <a href="https://www.youtube.com/playlist?list=PLE18841CABEA24090">Structure and Interpretation</a></td>
+    <td> <a href="https://en.wikipedia.org/wiki/Hal_Abelson">Abelson</a> & <a href="https://en.wikipedia.org/wiki/Gerald_Jay_Sussman">Sussman</a></td>
     <td> 1986 </td>
+  </tr>
+  <tr>
+    <td> <a href="https://www.youtube.com/watch?v=3IoqyXmAAkU&list=PLCAl7tjCwWyGjdzOOnlbGnVNZk0kB8VSa">Parallel Computing and Scientific Machine Learning</a></td>
+    <td> <a href="https://chrisrackauckas.com/">Chris Rackauckas</a></td>
+    <td> 2020 </td>
   </tr>
 </table>
 </div>
@@ -156,8 +166,13 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 <table>
   <tr>
     <td> <a href="https://www.youtube.com/playlist?list=PLMrJAkhIeNNR20Mz-VpzgfQs5zrYi085m">Control Bootcamp</a></td>
-    <td> <a href="https://en.wikipedia.org/wiki/Hal_Abelson">Steve Brunton</a></td>
+    <td> <a href="https://www.eigensteve.com/people">Steve Brunton</a></td>
     <td> 2017+ </td>
+  </tr>
+  <tr>
+    <td> <a href="https://www.youtube.com/3blue1brown">3Blue1Brown</a></td>
+    <td> <a href="https://en.wikipedia.org/wiki/3Blue1Brown">Grant Sanderson</a></td>
+    <td> 2015+ </td>
   </tr>
 </table>
 </div>
@@ -172,10 +187,20 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
       <h4>Papers</h4>
     </td>
   </tr>
-  <tr>
+   <tr>
     <td> <a href="https://www.cmu.edu/biolphys/deserno/pdf/can_a_biologist_fix_a_radio.pdf">Can a Biologist Fix a Radio?</a></td>
     <td> Yuri Lazenbnik </td>
     <td> 2002 </td>
+  </tr>
+  <tr>
+    <td colspan="3">
+      <h4>Blogs</h4>
+    </td>
+  </tr>
+  <tr>
+    <td> <a href="https://www.americanscientist.org/blog/the-long-view/the-science-of-scientific-writing">The Science of Scientific Writing</a></td>
+    <td> George Gopen and Judith Swan </td>
+    <td> 2018 </td>
   </tr>
 </table>
 </div>
@@ -280,6 +305,16 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
   <tr>
     <td> <a href="https://www.youtube.com/watch?v=PHe0bXAIuk0">How the Economic Machine Works</a></td>
     <td> <a href="https://en.wikipedia.org/wiki/Ray_Dalio">Ray Dalio </a> </td>
+    <td> 2013 </td>
+  </tr>
+  <tr>
+    <td colspan="3">
+      <h4>Lecture Series</h4>
+    </td>
+  </tr>
+  <tr>
+    <td> <a href="https://www.khanacademy.org/economics-finance-domain/core-finance">Finance and Capital Markets</a></td>
+    <td> <a href="https://en.wikipedia.org/wiki/Khan_Academy">Khan Academy </a> </td>
     <td> 2013 </td>
   </tr>
 </table>
